edition = "2023";  // successor to proto2 and proto3

package storage;

import "google/protobuf/timestamp.proto";
import "google/protobuf/go_features.proto";

option go_package = "./storage;storage";
option java_package = "io.stackrox.proto.storage";
option features.(pb.go).api_level = API_HYBRID;
option features.field_presence = IMPLICIT;
option features.enum_type = OPEN;
// `packed=false` needs to be transformed to field-level repeated_field_encoding
// features in Editions syntax
option features.json_format = ALLOW;
option features.utf8_validation = VERIFY;

message IntegrationHealth {
  enum Status {
    UNINITIALIZED = 0;
    UNHEALTHY = 1;
    HEALTHY = 2;
  }
  enum Type {
    UNKNOWN = 0;
    IMAGE_INTEGRATION = 1;
    NOTIFIER = 2;
    BACKUP = 3;
    DECLARATIVE_CONFIG = 4;
  }

  string id = 1; // @gotags: sql:"pk"
  string name = 2;
  Type type = 3;
  Status status = 4;
  string error_message = 5;

  // Timestamp when the status was ascertained
  google.protobuf.Timestamp last_timestamp = 6 [lazy = true];
}
